# OpenTOPAS-CancerRisk

./: .gitmodules  LICENSE.txt  README.md
data/: BEIRVII.txt  BEIRVII_repopulation.txt  BIERVII.txt  LifetimeRisks_Sa.csv  SEER_brain.csv  SEER_breast.csv  SEER_colonrectum.csv  SEER_esophagus.csv  SEER_kidneys.csv  SEER_larynx.csv  SEER_liver.csv  SEER_lungbronchus.csv  SEER_pancreas.csv  SEER_pharynx.csv  SEER_prostateovary.csv  SEER_stomach.csv  SEER_testesuterus.csv  SEER_thyroid.csv  SEER_urinarybladder.csv  Schneider.txt
examples/AF_SOBP_Liver/: adult_female_SOBP_liver.topas
python/: pyproject.toml
python/examples/: run_risk_estimates.py
python/src/risc/: __init__.py  cancer_risk.py  produce_risk_estimates.py
src/: TsFilterByVolume.cc  TsFilterByVolume.hh  TsRiskModel.cc  TsRiskModel.hh
