[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risc"
version = "1.0.0"
authors = [
  { name="Isaac Meyer", email="imeyer@mgh.harvard.edu" },
]
description = "Cancer risk estimates"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mghro/TOPAS-CancerRisk"
"Bug Tracker" = "https://github.com/mghro/TOPAS-CancerRisk"
